Changes

from version 0.999.1 to 1.0

improvement:
- on connecting to a SIX ask for a sensor definition file if not is yet loaded
- add buttons to connect to a pumpr driver and SIX so that the corresponding
  menu entries an optional method to connect

bugfixes:
- when disconnecting from a SIX, empty the current temperature display


from version 0.999 to 0.999.1

improvement:
- on closing the program, ask the user when connected to a SIX if he really wants to

bugfixes:
- when changing if temperature correction is performed, all values in the chart
  must be recalculated 
- when appending sensor data the time span between the last sensor data
  and now is respected


from version 0.998 to 0.999

improvements:
- new File menu to open sensor data files
- sensor data files can be dragged into the sensor data diagram to be opened
- allow to specify the number of last measurement that will be used to
  calculate the mean value that used for the calibration
- allow to set that not on every cycle a calibration is performed
- when selecting an existing sensor data file after connecting to the SIX
  the new sensor data will be appended to that file -> measurements can be resumed
- when connection to the SIX is lost, the software tries to reconnect automatically
- it is now possible to perform automated calibrations without connected pumps
- the number of pumps in the setup can be specified
- SIX with current range of 250 and 500 nA are supported
- new entry in File menu to change sensor data file
  (does the same as right-clicking on the field displaying the sensor data file)
- add chart context menu item to auto scale chart
- manually changed channel names are output to the sensor data file

bugfixes:
- fix wrong time format in tooltips in the data graph
- fix wrong units on time axis for the temperature
- Live mode did not react on changed inputs
- enable to reconnect after the pump driver USB cable was accidentally removed
- fix x-axis range settings