@@ -6,6 +6,8 @@ improvement:
 - on connecting to a SIX ask for a sensor definition file if not is yet loaded
 - add buttons to connect to a pumpr driver and SIX so that the corresponding
   menu entries an optional method to connect
+- when appending to existing data files, it is checked if the currently loaded
+  definition file is the same than used for the data file
 
 bugfixes:
 - when disconnecting from a SIX, empty the current temperature display
